css/board.css
/* ===== Scrollbar CSS ===== */
/* Firefox */
* {
    scrollbar-width: thin;
    scrollbar-color: #A8A8A8 #ffffff;
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
    width: 8px;
}

*::-webkit-scrollbar-track {
    background: #ffffff;
}

*::-webkit-scrollbar-thumb {
    background-color: #A8A8A8;
    border-radius: 16px;
    border: 8px solid #A8A8A8;
}

.d-none {
    display: none;
}

.d-flex {
    display: flex;
}

.flex-d-col {
    flex-direction: column;
}

.jc-center {
    justify-content: center;
}

.jc-start {
    justify-content: start;
}

.jc-end {
    justify-content: end;
}

.jc-between {
    justify-content: space-between;
}

.ai-center {
    align-items: center;
}

.main-container-body {
    width: 100%;
}

.board-main-container {
    margin-left: 232px;
    margin-top: 96px;
    height: calc(100% - 96px);
    display: flex;
    flex-direction: column;
}

.board-headline {
    display: flex;
    max-width: 1208px;
    justify-content: space-between;
    align-items: center;
    padding: 79.5px 88px 48px 64px;
}

.board-headline-button {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.board-headline-text {
    color: #000;
    /* Version 2/t1 */
    font-size: 61px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
    /* 73.2px */
}

.board-headline-container-search-add {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 32px;
}

.board-input-search-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1 0 0;
    width: 314px;
    padding: 8px 16px;
    border-radius: 10px;
    border: 1px solid #A8A8A8;
    background: #FFF;
}

.board-input-search-container:focus-within {
    border-color: #29ABE2;
}

.board-input-search {
    width: 232px;
    color: #D1D1D1;
    border: none;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
}

textarea:focus,
input:focus {
    outline: none;
}

.board-input-search:focus {
    color: #000000;
}

.board-input-search-icon:hover {
    background: #EEEEEE;
    border-radius: 45px;
    cursor: pointer;
}

.board-input-search-icon:active path {
    fill: #29ABE2;
}

.board-input-search-icons {
    display: flex;
    align-items: center;
    gap: 16px;
}

.board-button-addTask-mobile {
    display: none;
}

.board-button-addTask {
    display: flex;
    padding: 8px 16px;
    justify-content: center;
    align-items: center;
    gap: 4px;
    border-radius: 10px;
    border: 1px solid #2A3647;
    background: #2A3647;
}

.board-button-addTask-mobile:hover,
.board-button-addTask:hover {
    background: #29ABE2;
    border-color: #29ABE2;
    cursor: pointer;
}

.board-text-addTask {
    color: #FFF;
    font-family: Inter;
    font-size: 21px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
    /* 25.2px */
}

/* sytle task area */
.board-task-main {
    display: flex;
    flex: 1;
    overflow: auto;
    /* max-width: 1208px; */
    padding: 0px 64px;
    justify-content: space-between;
}

.board-task-category {
    /* Padding for hover effekt drag and drop */
    padding-top: 16px;
    /*  */
    display: flex;
    width: 280px;
    flex-direction: column;
    align-items: center;
    margin-bottom: 10px;
}

.board-task-headline {
    /* position: sticky;
    top: 0; */
    background-color: #F6F7F8;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 248px;
    padding: 8px 4px;
    border-radius: 10px;
    z-index: 10;
}

.board-task-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: auto;
    width: 100%;
    flex: 1;
    padding-bottom: 24px;
}

.board-add-task-headline {
    color: var(--menu-color, #42526E);
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: 120%;
}

.board-add-task-category {
    width: 24px;
    height: 24px;
    padding: 3px;
    color: #2A3647;
    border-radius: 8px;
    border: 2px solid #2A3647;
}

.board-add-task-category:hover,
.board-add-task-category:hover path {
    stroke: #29ABE2;
    border: 2px solid var(--Ligth-blue, #29ABE2);
    transition: ease-out;
    transition-duration: 0.3s;
    cursor: pointer;
}

.board-no-task-feedback {
    display: flex;
    height: 48px;
    width: 248px;
    margin-top: 16px;
    /* flex-direction: column; */
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    border: 1px dashed var(--icon, #A8A8A8);
    background: #E7E7E7;
    /* nuevo */
    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
}

.board-no-task-feedback-text {
    color: var(--icon, #A8A8A8);
    font-family: "Open Sans";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
    /* 19.2px */
}

span.board-task-card-preview,
p.board-task-card-preview {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 120%;
}

.board-task-card-preview {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    margin-top: 16px;
    width: 248px;
    padding: 16px;
    border-radius: 24px;
    background: var(--white, #FFF);
    /* shadoe backlog box */
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
}

.board-task-card-preview:hover {
    cursor: pointer;
    transform: rotate(5deg);
    transition: ease-in-out;
    transition-duration: 0.2s;
}

.board-task-card-taskcategory {
    width: fit-content;
    padding: 4px 16px;
    margin-bottom: 24px;
    border-radius: 8px;
    /* background: #0038FF; */
    color: #FFF;
    /* font-size: 16px; */
    /* font-style: normal;
    font-weight: 400;
    line-height: 120%; */
}

.board-userstory-color {
    background: #0038FF;
}

.board-technicaltask-color {
    background: #1FD7C1;
}
/* ... */

